# life-log-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN_BRIEF.md  DESIGN_HANDOFF.md  DESIGN_QA.md  FUNCTION_TEST_PLAN.md  PPT_DESIGN_BRIEF.md  PPT_EVIDENCE.md  PPT_GAP_CHECK.md  README.md  SERVER_RUNBOOK.md  package-lock.json  pyproject.toml
.claude/: settings.json
.claude/agents/: ai-feature-engineer.md  data-manager.md  design-lead.md  frontend-lead.md  infrastructure-lead.md  integrations-wrapper.md  ncloud-architect.md  pipeline-engineer.md  project-manager.md  pwa-frontend.md  search-rag.md  security-lead.md  security-pii.md  service-planner.md  test-lead.md
.omc/sessions/: 88d01801-7015-474b-bc2a-fd716f878278.json
.omc/state/: agent-replay-f9dfeec6-38ca-4dcf-a351-5a906ed2b061.jsonl  hud-stdin-cache.json  last-tool-error.json  subagent-tracking.json
app/: auth.py  config.py  db.py  main.py
app/integrations/: embeddings.py  llm.py  storage.py
app/models/: __init__.py  item.py
app/routers/: ingest.py  items.py  search.py
app/services/: classify.py  index.py  pipeline.py  search.py
design/: life_log_draft.html
docs/presentation/: life_log 발표.html
docs/presentation/assets/: deck.css
docs/superpowers/plans/: 2026-05-31-vertical-slice.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  main.tsx
migrations/: env.py
migrations/versions/: 001_init.py
tests/: conftest.py  test_auth.py  test_ingest.py  test_search.py
(+31 files in other folders)
