[project]
name = "life-log"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlmodel>=0.0.21",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "pgvector>=0.3",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "PyJWT>=2.8",
    "python-multipart>=0.0.12",
    "Pillow>=10.4",
    "piexif>=1.1",
    "alembic>=1.13",
    "cryptography>=48.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "aiosqlite>=0.22.1",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
